# LegacyVTKFileReader

./: pyproject.toml
src/LegacyVTKFileReader/: __init__.py
