[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LegacyVTKFileReader"
version = "1.0"
description = "File reader to import legacy vtk file"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Constanze Kalcher", email = "support@ovito.org"}]
maintainers = [{name = "Constanze Kalcher", email = "support@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.11",
]

[project.urls]
repository = "https://github.com/ckalcher/LegacyVTKFileReader"

[project.entry-points.'OVITO.FileReader']
"Legacy VTK File Reader" = "LegacyVTKFileReader:LegacyVTKFileReader"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]